--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-animate-on-scroll": "^2.1.3",
     "@types/react-dom": "^17.0.0",
     "@types/react-scroll": "^1.8.3",
+    "animate.css": "^4.1.1",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
