--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-scroll": "^1.8.3",
     "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
