--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/file-saver": "^2.0.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -14,14 +16,18 @@
     "@types/react-scroll": "^1.8.3",
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
+    "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-muted-video-player": "^0.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "typescript": "^4.1.2",
+    "use-window-scroll-position": "^1.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
