--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-icons": "^4.3.1",
     "react-muted-video-player": "^0.3.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.3",
     "react-simple-modal-provider": "^1.7.1",
     "reactjs-popup": "^2.0.5",
